--- a/index.html
+++ b/index.html
@@ -1,29 +1,13 @@
 <!DOCTYPE html>
 <html lang="vi">
-  <style>
-/* Ẩn toàn bộ header + navbar của Blogspot */
-#header-wrapper,
-#Header1,
-.header,
-.navbar,
-.navbar-wrapper,
-#navbar-iframe,
-#blog-pager,
-.blog-pager {
-  display: none !important;
-}
-
-/* Xoá khoảng trống phía trên */
-body {
-  padding-top: 0 !important;
-  margin-top: 0 !important;
-}
-</style>
-
 <head>
 <meta charset="UTF-8">
 <title>Kiểm kê vườn cây cao su</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!-- PWA -->
+<link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#2e7d32">
 
 <!-- SheetJS -->
 <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
@@ -38,12 +22,6 @@ body {
   --purple:#7e57c2;
   --red:#e53935;
   --gray:#6c757d;
-}
-/* ===== FORCE DESKTOP VIEW – TẮT MOBILE BLOGGER ===== */
-@media only screen and (max-width: 800px) {
-  body {
-    -webkit-text-size-adjust: 100%;
-  }
 }
 
 body{
@@ -61,9 +39,7 @@ header{
   font-weight:bold;
 }
 
-.container{
-  padding:12px;
-}
+.container{ padding:12px; }
 
 .box{
   background:white;
@@ -147,40 +123,15 @@ footer{
   padding:10px 0 14px;
 }
 </style>
-  <link rel="manifest" href="data:application/json,{
-  &quot;name&quot;: &quot;Kiem ke vuon cay cao su&quot;,
-  &quot;short_name&quot;: &quot;Kiem ke cao su&quot;,
-  &quot;start_url&quot;: &quot;.&quot;,
-  &quot;display&quot;: &quot;standalone&quot;,
-  &quot;background_color&quot;: &quot;#e8f5e9&quot;,
-  &quot;theme_color&quot;: &quot;#2e7d32&quot;,
-  &quot;orientation&quot;: &quot;portrait&quot;,
-  &quot;icons&quot;: [
-    {
-      &quot;src&quot;: &quot;https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhFTF4CDBtNjSWq4dG0yJkRa28qsXKRcUsITz_6P1vRgDOKf9YSTI5fQt4yjKD61GSSVV_JFO1rBPHFvHPatxfr8cq4jjsXJ4ms_1JFHsl7fj1YdRztvPhKvxosqBRfOqtePFxX1Ud8yC-JcDbwNxjQIW2E5amKk_0l1nvaMZ-B4TnfLrK4HlqeyjKihJ1h/s320/icon-192.png&quot;,
-      &quot;sizes&quot;: &quot;192x192&quot;,
-      &quot;type&quot;: &quot;image/png&quot;
-    },
-    {
-      &quot;src&quot;: &quot;https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiJnGe8Vo9atS1cTfHQVdzxdYn7BEUEpl63y-aHzmLVQNL2bGp6OZVZLhwx1NcBWRMeQE0sRyIVKrj0taY9wsPA3AYDX5cqweaze_ksTmWKW9AAWTk8k6b5N1o0ZQ-aT_M3kmP-SbChANsG0AlUuam35PLVd_e8qCwCv8Mi-NgPDDKyE4psmSEYHXvB4pPC/s320/icon-512.png&quot;,
-      &quot;sizes&quot;: &quot;512x512&quot;,
-      &quot;type&quot;: &quot;image/png&quot;
-    }
-  ]
-}">
-<meta name="theme-color" content="#2e7d32">
-
 </head>
 
 <body>
 
-<header>
-  🌱 KIỂM KÊ VƯỜN CÂY CAO SU
-</header>
+<header>🌱 KIỂM KÊ VƯỜN CÂY CAO SU</header>
 
 <div class="container">
 
-<!-- ===== KHỞI TẠO LÔ ===== -->
+<!-- KHỞI TẠO LÔ -->
 <div id="setup" class="box">
   <h3>Khởi tạo lô</h3>
   Tên lô <input id="lo">
@@ -190,7 +141,7 @@ footer{
   <button class="btn-full" onclick="startLo()">BẮT ĐẦU KIỂM KÊ</button>
 </div>
 
-<!-- ===== KIỂM KÊ ===== -->
+<!-- KIỂM KÊ -->
 <div id="counter" class="box" style="display:none;">
   <div id="info"></div>
   <div id="tree">Cây số: 1</div>
@@ -208,7 +159,7 @@ footer{
   <button class="btn-full" onclick="finishRow()">HOÀN TẤT HÀNG</button>
 </div>
 
-<!-- ===== CUỐI NGÀY ===== -->
+<!-- CUỐI NGÀY -->
 <div class="box">
   <button class="btn-full" onclick="exportAll()">XUẤT EXCEL CUỐI NGÀY</button>
   <button class="btn-small" onclick="clearData()">XOÁ TOÀN BỘ DỮ LIỆU</button>
@@ -216,19 +167,10 @@ footer{
 
 </div>
 
-<footer>
-  © Copyright by <b>vancanhql@gmail.com</b>
-</footer>
+<footer>© Copyright by <b>vancanhql@gmail.com</b></footer>
 
 <script>
-/* ===== MÀU LOẠI CÂY ===== */
-const typeColors={
-  "G":"#66bb6a",
-  "O":"#fb8c00",
-  "K1":"#fdd835",
-  "K2":"#7e57c2",
-  "D":"#e53935"
-};
+const typeColors={G:"#66bb6a",O:"#fb8c00",K1:"#fdd835",K2:"#7e57c2",D:"#e53935"};
 
 let dsLo=JSON.parse(localStorage.getItem("dsLo")||"[]");
 let loHT=null,hang=1,cay=1;
@@ -256,12 +198,11 @@ function count(type){
   loHT.data.push({hang,cay,type});
   lastType.innerText="Vừa nhập: "+type;
   lastType.style.color=typeColors[type];
-  cay++;
-  updateInfo();
+  cay++; updateInfo();
 }
 
 function undoLast(){
-  if(loHT.data.length==0) return alert("Chưa có cây để sửa");
+  if(loHT.data.length===0) return alert("Chưa có cây để sửa");
   let last=loHT.data.at(-1);
   if(last.hang!==hang) return alert("Không thể sửa cây hàng trước");
   loHT.data.pop(); cay=Math.max(1,cay-1);
@@ -287,13 +228,35 @@ function finishLo(){
 
 function exportAll(){
   let ds=JSON.parse(localStorage.getItem("dsLo")||"[]");
-  if(ds.length==0) return alert("Chưa có lô nào");
+  if(ds.length===0) return alert("Chưa có lô nào");
+
   let wb=XLSX.utils.book_new();
 
+  /* TỔNG HỢP LÔ */
+  let thLo=[["STT","Tên lô","Năm trồng","Diện tích","Số hàng","Tổng cây","G","O","K1","K2","D"]];
   ds.forEach((lo,i)=>{
-    let s1=[["STT","Lô","Năm trồng","Diện tích","Hàng","Cây","Loại"]];
-    lo.data.forEach((d,j)=>s1.push([j+1,lo.lo,lo.namTrong,lo.dienTich,d.hang,d.cay,d.type]));
-    XLSX.utils.book_append_sheet(wb,XLSX.utils.aoa_to_sheet(s1),`LO${i+1}_CT`);
+    let d={G:0,O:0,K1:0,K2:0,D:0};
+    lo.data.forEach(x=>d[x.type]++);
+    thLo.push([i+1,lo.lo,lo.namTrong,lo.dienTich,lo.soHang,lo.data.length,d.G,d.O,d.K1,d.K2,d.D]);
+  });
+  XLSX.utils.book_append_sheet(wb,XLSX.utils.aoa_to_sheet(thLo),"TONG_HOP_LO");
+
+  /* THEO HÀNG */
+  ds.forEach((lo,i)=>{
+    let sh=[["Hàng","Tổng cây","G","O","K1","K2","D"]];
+    for(let h=1;h<=lo.soHang;h++){
+      let d={G:0,O:0,K1:0,K2:0,D:0};
+      lo.data.filter(x=>x.hang===h).forEach(x=>d[x.type]++);
+      sh.push([h,d.G+d.O+d.K1+d.K2+d.D,d.G,d.O,d.K1,d.K2,d.D]);
+    }
+    XLSX.utils.book_append_sheet(wb,XLSX.utils.aoa_to_sheet(sh),`LO_${i+1}_TH`);
+  });
+
+  /* CHI TIẾT */
+  ds.forEach((lo,i)=>{
+    let ct=[["STT","Tên lô","Năm trồng","Diện tích","Hàng","Cây","Loại"]];
+    lo.data.forEach((x,j)=>ct.push([j+1,lo.lo,lo.namTrong,lo.dienTich,x.hang,x.cay,x.type]));
+    XLSX.utils.book_append_sheet(wb,XLSX.utils.aoa_to_sheet(ct),`LO_${i+1}_CHI_TIET`);
   });
 
   XLSX.writeFile(wb,"KiemKe_CuoiNgay.xlsx");
@@ -307,19 +270,14 @@ function clearData(){
   }
 }
 </script>
+
 <script>
-if ('serviceWorker' in navigator) {
+if('serviceWorker' in navigator){
   navigator.serviceWorker.register('service-worker.js')
-    .then(function () {
-      console.log('PWA ready');
-    })
-    .catch(function (err) {
-      console.error(err);
-    });
+    .then(()=>console.log("PWA ready"))
+    .catch(e=>console.error(e));
 }
 </script>
 
-
 </body>
 </html>
-
