--- a/index.html
+++ b/index.html
@@ -472,13 +472,41 @@ function endLo(){
 </script>
 
 <script>
-if('serviceWorker' in navigator){
-  navigator.serviceWorker.register('service-worker.js');
+if ("serviceWorker" in navigator) {
+  navigator.serviceWorker.register("service-worker.js").then(reg => {
+
+    // Khi phát hiện service worker mới
+    reg.onupdatefound = () => {
+      const newWorker = reg.installing;
+
+      newWorker.onstatechange = () => {
+        if (
+          newWorker.state === "installed" &&
+          navigator.serviceWorker.controller
+        ) {
+          showUpdateToast();
+        }
+      };
+    };
+
+  });
+}
+
+function showUpdateToast(){
+  const t = document.getElementById("toast");
+  t.innerHTML = "🔄 Có phiên bản mới – bấm để cập nhật";
+  t.style.display = "block";
+
+  t.onclick = () => {
+    location.reload(true); // reload để dùng bản mới
+  };
 }
 </script>
 
+
 </body>
 </html>
+
 
 
 
